<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FunPen</string>
    <string name="mainMenu_clickToDraw">Touch to start drawing</string>
    <string name="mainMenu_gallery">GALLERY</string>
    <string name="mainMenu_account">COMMUNITY</string>
    <string name="mainMenu_exit_popup_title">Exit Application ?</string>
    <string name="mainMenu_exit_popup_message">Click yes to exit !</string>
    <string name="mainMenu_exit_popup_yes">Yes</string>
    <string name="mainMenu_exit_popup_no">No</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="loginActivity_hintsPseudo">Username</string>
    <string name="loginActivity_hintsEmail">Email</string>
    <string name="loginActivity_hintsEmailUsername">Email / Username</string>
    <string name="loginActivity_hintsPassword">Password</string>
    <string name="loginActivity_LoginButton">Login</string>
    <string name="subscribeActivity_SubscribeButton">Subscribe</string>
    <string name="bottomMenu_arrowDescription">Arrow to show open or close bottom menu</string>
    <string name="bottomMenu_colorscaleDescription">Use this tool to choose what color to use when drawing</string>
    <string name="bottomMenu_stretchDescription">With this tool you can stretch</string>
    <string name="bottomMenu_inflateDescription">With this tool you can inflate</string>
    <string name="bottomMenu_digDescription">With this tool you can dig</string>
    <string name="bottomMenu_scisorsDescription">With this tool you can cut</string>
    <string name="drawView_flashButton_description">Tap this button to toggle the flash light</string>
    <string name="loginActivity_GetPasswordButton">Inscription</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_draw">DrawActivity</string>
    <string name="title_activity_community">CommunityActivity</string>
    <string name="title_activity_friend_list">FriendListActivity</string>
    <string name="title_activity_inscription">InscriptionActivity</string>
    <string name="localhost">http://192.168.1.95:1337</string>
    <string name="activity_account_pseudo">Pseudonyme</string>
    <string name="activity_account_mail">Mail</string>
    <string name="activity_account_edit_button">Edit</string>
    <string name="activity_community_address_mail">K@anonymous.com</string>
    <string name="friendActivity_hint_search">Search your friends</string>
    <string name="gallery_username">Gallerie de Pseudonyme</string>
    <string name="module_user">Je suis un autre utilisateur</string>
    <string name="module_friend">Je suis un ami à toi</string>
    <string name="module_not_friend">Je veut être ton ami</string>
</resources>
