<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.funpen.activities.DrawActivity">

    <RelativeLayout
        android:id="@+id/drawView_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <fr.funpen.camera.MyGLSurfaceView
            android:id="@+id/myGLSurfaceView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <ImageView
            android:id="@+id/flashButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/mainMenu_Settings_margin"
            android:layout_marginStart="@dimen/mainMenu_Settings_margin"
            android:layout_marginTop="@dimen/mainMenu_Settings_margin"
            android:contentDescription="@string/drawView_flashButton_description"
            android:onClick="onFlashClick"
            android:src="@drawable/flashicon_off" />

        <LinearLayout
            android:id="@+id/drawView_bottomMenu"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="-80dp"
            android:background="#99000000"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/drawView_arrowBarWrapper"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:gravity="center_horizontal|bottom">

                <ImageView
                    android:id="@+id/bottomMenu_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/bottomMenu_arrowDescription"
                    android:rotation="180"
                    android:src="@drawable/bottommenu_arrow" />
            </RelativeLayout>

            <HorizontalScrollView
                android:id="@+id/bottomMenu_horizontalScroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="false"
                android:scrollbars="none"
                android:overScrollMode="never">

                <LinearLayout
                    android:id="@+id/bottomMenu_toolsLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/tool_colorscaleButton"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/bottomMenu_colorscaleDescription"
                        android:src="@drawable/bottommenu_colorscale" />

                    <ImageView
                        android:id="@+id/tool_stretchButton"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/bottomMenu_stretchDescription"
                        android:src="@drawable/bottommenu_stretch" />

                    <ImageView
                        android:id="@+id/tool_inflateButton"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/bottomMenu_inflateDescription"
                        android:src="@drawable/bottommenu_inflate" />

                    <ImageView
                        android:id="@+id/tool_digButton"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/bottomMenu_digDescription"
                        android:src="@drawable/bottommenu_dig" />

                    <ImageView
                        android:id="@+id/tool_scisorsButton"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/bottomMenu_scisorsDescription"
                        android:src="@drawable/bottommenu_scisors" />
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>

    </RelativeLayout>

    <!--<include layout="@layout/camera" />-->

</RelativeLayout>
