<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="${relativePackage}.${activityClass}">

    <EditText
        android:id="@+id/field_email"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:background="@drawable/edit_text_borders"
        android:ems="10"
        android:hint="@string/loginActivity_hintsEmailUsername"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />

    <EditText
        android:id="@+id/field_password"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:background="@drawable/edit_text_borders"
        android:ems="10"
        android:hint="@string/loginActivity_hintsPassword"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_below="@+id/field_email"
        android:layout_alignLeft="@+id/field_email"
        android:layout_alignStart="@+id/field_email" />

    <TextView
        android:id="@+id/loginActivity_loginButton"
        android:layout_width="260dp"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/main_menu_button_overlay"
        android:clickable="true"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="onLoginClicked"
        android:text="@string/loginActivity_LoginButton"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/button_subscribe"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onInscriptionClicked"
        android:text="@string/loginActivity_GetPasswordButton"
        android:textColor="@android:color/white"
        android:layout_below="@+id/field_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />


</RelativeLayout>