<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="${relativePackage}.${activityClass}" >

    <EditText
        android:id="@+id/field_pseudo"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:paddingLeft="7dp"
        android:background="@drawable/edit_text_borders"
        android:ems="10"
        android:hint="@string/loginActivity_hintsPseudo"
        android:inputType="text"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_marginBottom="48dp"
        android:layout_above="@+id/field_email"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/field_email"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:paddingLeft="7dp"
        android:background="@drawable/edit_text_borders"
        android:ems="10"
        android:hint="@string/loginActivity_hintsEmail"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_marginBottom="46dp"
        android:layout_above="@+id/field_password"
        android:layout_alignLeft="@+id/field_password"
        android:layout_alignStart="@+id/field_password" />

    <EditText
        android:id="@+id/field_password"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:paddingLeft="7dp"
        android:background="@drawable/edit_text_borders"
        android:ems="10"
        android:hint="@string/loginActivity_hintsPassword"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_marginBottom="86dp"
        android:layout_above="@+id/loginActivity_subscribeButton"
        android:layout_alignLeft="@+id/field_pseudo"
        android:layout_alignStart="@+id/field_pseudo" />

    <TextView
        android:id="@+id/loginActivity_subscribeButton"
        android:layout_width="260dp"
        android:layout_height="75dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/mainmenu_buttonoverlay"
        android:clickable="true"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="onSubscribeClicked"
        android:text="@string/subscribeActivity_SubscribeButton"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>