<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background1"
    tools:context=".AccountActivity">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frameLayout">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            android:id="@+id/imageView4"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/android_avatar" />
    </FrameLayout>

    <FrameLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_marginTop="20dp"
        android:layout_height="50dp"
        android:background="#21262B"
        android:layout_below="@+id/frameLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout2">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="textPersonName"
            android:text="@string/activity_account_pseudo"
            android:ems="10"
            android:textColor="#ffffff"
            android:id="@+id/userNameAccount" />
    </FrameLayout>

    <FrameLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="#21262B"
        android:layout_below="@+id/frameLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="textPersonName"
            android:text="@string/activity_account_mail"
            android:ems="10"
            android:textColor="#ffffff"
            android:id="@+id/mailAccount" />
    </FrameLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_account_edit_button"
        android:id="@+id/button2"
        android:onClick="onEditClicked"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
