<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainMenu_mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <include layout="@layout/camera" />

    <LinearLayout
        android:id="@+id/mainMenu_backgroundLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#99000000"
        android:clickable="true"
        android:onClick="onBackgroundClicked"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/mainMenu_settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mainMenu_Settings_margin"
            android:layout_marginStart="@dimen/mainMenu_Settings_margin"
            android:layout_marginTop="@dimen/mainMenu_Settings_margin"
            android:contentDescription="@string/mainMenu_settingsButton_description"
            android:onClick="onSettingsClicked"
            android:src="@drawable/icon_settings" />

        <TextView
            android:id="@+id/mainMenu_touchToStart"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.90"
            android:clickable="false"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onBackgroundClicked"
            android:text="@string/mainMenu_clickToDraw"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/mainMenu_gallerieButton"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:background="@drawable/mainmenu_buttonoverlay"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onGalleryClicked"
            android:text="@string/mainMenu_gallery"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/mainMenu_accountButton"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:background="@drawable/mainmenu_buttonoverlay"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onAccountClicked"
            android:text="@string/mainMenu_account"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff" />
    </LinearLayout>

</RelativeLayout>